2008-09-07  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* dw2gencfi.c (CFI_DIFF_EXPR_OK): Define if not defined.
	(dot_cfi_personality): Use CFI_DIFF_EXPR_OK instead of DIFF_EXPR_OK.
	(dot_cfi_lsda, output_cie, output_fde): Likewise.
	* config/tc-hppa.h (CFI_DIFF_EXPR_OK): Define.

2008-09-06  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/tc-mips.h (DWARF2_FDE_RELOC_SIZE): Define.

2008-09-03  Nick Clifton  <nickc@redhat.com>

	* config/tc-i386.c (pe_lcomm_internal): New function.  Allows the
	alignment field of the .lcomm directive to be optional.
	(pe_lcomm): New function.  Pass pe_lcomm_internal to
	s_comm_internal.
	(md_pseudo_table): Implement .lcomm directive for COFF based
	targets.
	* doc/c-i386.texi (i386-Directives): New node.  Used to document
	the .lcomm directive.
	
2008-08-30  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* config/tc-hppa.h: Don't define DWARF2_EH_FRAME_READ_ONLY on Linux
	and NetBSD.

2008-08-29  Eric B. Weddington  <eric.weddington@atmel.com>

	* config/tc-avr.c (mcu_types): Add atmega16u4.
	* doc/c-avr.texi: Likewise.

2008-08-28  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-ia64.c (CR_IIB0): New.
	(CR_IIB1): Likewise.
	(cr): Add cr.iib0 and cr.iib1.
	(specify_resource): Handle IA64_RS_CR_IIB and CR_IIB0/CR_IIB1.

2008-08-28  Jan Beulich  <jbeulich@novell.com>

	* config/tc-i386.c (md_assemble): Force number of displacement
	operands to zero when processing string instruction.
	(i386_index_check): Special-case string instruction operands. Don't
	fudge address prefix if there already was a memory operand. Fix
	error message to correctly reflect the addressing mode used.
	(i386_att_operand): Fix comment.
	(i386_intel_operand): Snapshot, clear, and restore base and index
	reg for each operand processed. Increment count of memory operands
	later.

2008-08-27  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* config/tc-hppa.c (is_SB_relative): New macro.
	(fix_new_hppa): Remove $segrel$ marker.